NMS-13652: Subscriber refactoring

--- a/core/ipc/twin/jms/publisher/pom.xml
+++ b/core/ipc/twin/jms/publisher/pom.xml
@@ -36,6 +36,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.opennms.features.distributed</groupId>
+            <artifactId>org.opennms.features.distributed.opennms-identity</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.opennms.core</groupId>
             <artifactId>org.opennms.core.camel</artifactId>
         </dependency>
