--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "test": "vite-jest"
   },
   "dependencies": {
+    "@ag-grid-community/vue3": "^26.0.0",
     "@featherds/app-bar": "^0.2.6",
     "@featherds/app-layout": "^0.2.6",
     "@featherds/autocomplete": "^0.2.10",
@@ -27,11 +28,18 @@
     "@featherds/table": "^0.2.6",
     "@featherds/tabs": "^0.2.6",
     "@featherds/utils": "^0.2.6",
+    "ag-grid-community": "^26.0.0",
+    "ag-grid-vue3": "26.0.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.6",
+    "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.0",
     "lodash": "^4.17.21",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "sass": "^1.37.5",
     "sass-loader": "^12.1.0",
+    "splitpanes": "^3.0.6",
     "vite-svg-loader": "^2.2.0",
     "vue": "^3.2.17",
     "vue-router": "4",
@@ -42,6 +50,7 @@
     "@types/lodash": "^4.14.172",
     "@types/node": "^15.14.1",
     "@vitejs/plugin-vue": "^1.3.0",
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/test-utils": "^2.0.0-rc.12",
     "jest": "^27.0.6",
