--- a/core/ipc/common/kafka/pom.xml
+++ b/core/ipc/common/kafka/pom.xml
@@ -98,9 +98,9 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.yammer.metrics</groupId>
+        <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-core</artifactId>
-        <version>2.2.0</version>
+        <version>${dropwizardMetricsVersion}</version>
       </dependency>
     </dependencies>
 </project>
